<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarBmiActivity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorPrimary"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_margin="10dp"
        android:layout_below="@+id/toolBarBmiActivity"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="METRIC UNITS"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            />
        <RadioButton
            android:id="@+id/rbUSUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="US UNITS"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/rgUnits"
        android:id="@+id/til_metric_weight"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_etWeight"
            android:textSize="16sp"
            android:inputType="numberDecimal">

        </androidx.appcompat.widget.AppCompatEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/til_metric_weight"
        android:id="@+id/til_metric_height"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        app:hintTextColor="@color/colorAccent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_etMetricHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="HEIGHT (in cm)"
        android:inputType="numberDecimal"
        android:textSize="16sp">

    </androidx.appcompat.widget.AppCompatEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_below="@id/til_metric_weight"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:id="@+id/llUsHeight"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_us_ft_height"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            app:hintTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_etFeetHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Feet"
                android:inputType="numberDecimal"
                android:textSize="16sp">

            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_us_ft_inches"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:hintTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_etInchesHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Inches"
                android:inputType="numberDecimal"
                android:textSize="16sp">

            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/llDisplayBMIResult"
        android:layout_below="@+id/til_metric_height"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        tools:visibility="visible"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="your bmi"
            android:textAllCaps="true"
            android:gravity="center"
            android:id="@+id/tvYourBMI"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            tools:text="15.00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/tvBMIValue"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:gravity="center"
            tools:text="BMI type"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            tools:text="Description"
            android:textSize="18sp"
            android:id="@+id/tvBMIDescription"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnCalculate"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDisplayBMIResult"
        android:text="Calculate" />

</RelativeLayout>